--- a/reviews.html
+++ b/reviews.html
@@ -9,11 +9,13 @@
 <body>
     <header>
         <h1>Navigation Menu</h1>
-        <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/reviews.html">Reviews</a></li>
-            <li><a href="/contact.html">Contact</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/reviews.html">Reviews</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main></main>
     <footer></footer>
