Added Hero banner, touched up on css file, added some comments

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+    <!-- Navigation Menu and Logo --> 
     <div id = "fullheader">
         <h1 id="title">MovieVerse</h1>
         <nav>
@@ -22,7 +23,19 @@
         </nav>
     </div>
     </header>
-    <main></main>
+    <main>
+        <!-- Hero Banner -->
+        <div class="hero_image">
+            <div class="hero_text">
+                <h1>
+                    MOVIEVERSE
+                </h1>
+                <p>
+                    CINEMA'S FINEST REVIEWERS
+                </p>
+            </div>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
