--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
     <!-- Navigation Menu and Logo --> 
     <div id = "fullheader">
-        <h1 id="title">MovieVerse</h1>
+        
+        <div id="title"><h1>MovieVerse</h1></div>
         <nav>
             <ul id="navmenu">
                 <li><a href="index.html">Home</a></li>
@@ -34,6 +35,27 @@
                     CINEMA'S FINEST REVIEWERS
                 </p>
             </div>
+        </div>
+        <div id="wrapper">
+            <!-- Will update quotes to text -->
+        <div class="home_review">
+            <img src="images/fantastic_four_ver26.jpg" alt="" class="poster">
+            <img src="images/quotes.png" alt="" class="quotes">
+            <div class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel purus auctor metus porta pulvinar ut ac libero. Vivamus ultricies dui et sem ultricies dictum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum et augue et fringilla. Proin tempor aliquam lobortis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus sed felis id quam pellentesque tempor. Proin dignissim diam vel leo ullamcorper, vitae posuere nibh luctus. In egestas leo a libero pharetra viverra. Duis ac urna vel ex semper congue. Fusce dapibus a libero vel ullamcorper. Vivamus tincidunt metus nec eros fermentum interdum. Nulla arcu diam, feugiat eu diam in, pellentesque placerat erat. Phasellus at ligula convallis, venenatis metus sed, ullamcorper leo. Nulla facilisis tempus justo, quis elementum lorem tincidunt sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+            <img src="images/quotes.png" alt="" class="quotes_r">
+        </div>
+        <div class="home_review">
+            <img src="images/qak95hegodbb1.jpg" alt="" class="poster">
+            <img src="images/quotes.png" alt="" class="quotes">
+            <div class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel purus auctor metus porta pulvinar ut ac libero. Vivamus ultricies dui et sem ultricies dictum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum et augue et fringilla. Proin tempor aliquam lobortis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus sed felis id quam pellentesque tempor. Proin dignissim diam vel leo ullamcorper, vitae posuere nibh luctus. In egestas leo a libero pharetra viverra. Duis ac urna vel ex semper congue. Fusce dapibus a libero vel ullamcorper. Vivamus tincidunt metus nec eros fermentum interdum. Nulla arcu diam, feugiat eu diam in, pellentesque placerat erat. Phasellus at ligula convallis, venenatis metus sed, ullamcorper leo. Nulla facilisis tempus justo, quis elementum lorem tincidunt sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+            <img src="images/quotes.png" alt="" class="quotes_r">
+        </div>
+        <div class="home_review">
+            <img src="images/one_battle_after_another_ver10_xlg.jpg" alt="" class="poster">
+            <img src="images/quotes.png" alt="" class="quotes">
+            <div class="review-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vel purus auctor metus porta pulvinar ut ac libero. Vivamus ultricies dui et sem ultricies dictum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus condimentum et augue et fringilla. Proin tempor aliquam lobortis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus sed felis id quam pellentesque tempor. Proin dignissim diam vel leo ullamcorper, vitae posuere nibh luctus. In egestas leo a libero pharetra viverra. Duis ac urna vel ex semper congue. Fusce dapibus a libero vel ullamcorper. Vivamus tincidunt metus nec eros fermentum interdum. Nulla arcu diam, feugiat eu diam in, pellentesque placerat erat. Phasellus at ligula convallis, venenatis metus sed, ullamcorper leo. Nulla facilisis tempus justo, quis elementum lorem tincidunt sed. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+            <img src="images/quotes.png" alt="" class="quotes_r">
+        </div>
         </div>
     </main>
     <footer></footer>
