--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     <header>
     <!-- Navigation Menu and Logo --> 
     <div id = "fullheader">
-        
         <div id="title"><h1>MovieVerse</h1></div>
         <nav>
             <ul id="navmenu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class = "currentbutton">Home</a></li>
+                <li><a href="reviews.html" class = "navbutton">Reviews</a></li>
+                <li><a href="contact.html" class = "navbutton">Contact</a></li>
             </ul>
         </nav>
     </div>
