refined responsive design

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </p>
             </div>
         </div>
-        <div id="wrapper">
+        <div id="home-wrapper">
             <!-- Will update quotes to text -->
         <div class="home_review">
             <img src="images/fantastic_four_ver26.jpg" alt="" class="poster">
