made prototype footer

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
         </article>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div id = "fullfooter">
+            <h2 id = "footcontact">MovieVerse</h2>
+            <ul>
+                <li><a href="https://www.twitter.com">Our Twitter</a></li>
+                <li><a href="https://www.instagram.com">Our Instagram</a></li>
+                <li><a href="https://www.tiktok.com">Our Tiktok</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
