--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
     <!-- Navigation Menu and Logo --> 
     <div id = "fullheader">
-        <div id="title"><h1>MovieVerse</h1></div>
+        <div id="title"></div>
         <nav>
             <ul id="navmenu">
                 <li><a href="index.html" class = "currentbutton" >Home</a></li>
