--- a/contact.html
+++ b/contact.html
@@ -11,26 +11,38 @@
 </head>
 <body>
     <header>
-        <div id="fullheader">
-            <h1 id="title">MovieVerse</h1>
-            <nav>
-                <ul id="navmenu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="reviews.html">Reviews</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+    <!-- Navigation Menu and Logo -->
+    <div id="fullheader">
+        <h1 id="title">MovieVerse</h1>
+        <nav>
+            <ul id="navmenu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     </header>
     <main>
+        <!-- Hero Banner -->
+        <div class="hero_image">
+            <div class="hero_text">
+                <h1>
+                    MOVIEVERSE
+                </h1>
+                <p>
+                    CINEMA'S FINEST REVIEWERS
+                </p>
+            </div>
+        </div>
         <h2>MovieVerse</h2>
-        <p>MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
+        <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
 
-        <h3>What is a movie?</h3>
-        <p>A movie is a full-length film recorded by a camera or animated by artists shown in a theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
+        <h2>What is a movie?</h2>
+        <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
 
-        <h4>How big is MovieVerse?</h4>
-        <p>Movies have been around since the 1890s and have kept their popularity to this day. MovieVerse has been a vibrant and growing community in the past few years.</p>
+        <h2>How big is MovieVerse?</h2>
+        <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day. MovieVerse has been a vibrant and growing community in the past few years.</p>
 
         <!-- archived content
 
@@ -58,14 +70,14 @@
         
         -->
 
-        <h6>Contact Us</h6>
-        <p>Say hello!</p>
+        <h2>Contact Us</h2>
+        <p class="review-text">Say hello!</p>
 
         <form id="form">
-            <p><input placeholder="Your Name" required></p>
-            <p><input placeholder="Your Email" required></p>
-            <p><textarea placeholder="Your Message" required></textarea></p>
-            <p><input id="submit" type="submit" value="Send"></p>
+            <p class="review-text"><input placeholder="Your Name" required></p>
+            <p class="review-text"><input placeholder="Your Email" required></p>
+            <p class="review-text"><textarea placeholder="Your Message" required></textarea></p>
+            <p class="review-text"><input id="submit" type="submit" value="Send"></p>
         </form>
 
     </main>
