added updated header and footer to reviews.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-    <!-- Navigation Menu and Logo -->
-    <div id="fullheader">
-        <h1 id="title">MovieVerse</h1>
+    <!-- Navigation Menu and Logo --> 
+    <div id = "fullheader">
+        <div id="title"></div>
         <nav>
             <ul id="navmenu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class = "navbutton" >Home</a></li>
+                <li><a href="reviews.html" class = "navbutton">Reviews</a></li>
+                <li><a href="contact.html" class = "currentbutton">Contact</a></li>
             </ul>
-        </nav>
+        </nav> 
     </div>
     </header>
     <main id="contactmain">
@@ -55,6 +55,16 @@
         </form>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div id = "fullfooter">
+            <h2 id = "footcontact">MovieVerse</h2>
+            <ul>
+                <li><a href="https://www.twitter.com">Our Twitter</a></li>
+                <li><a href="https://www.instagram.com">Our Instagram</a></li>
+                <li><a href="https://www.tiktok.com">Our Tiktok</a></li>
+            </ul>
+            <p>This site is a project made for ACIT1515. Created by Jack, Austin, Adrian, and Enock.</p>
+        </div>
+    </footer>
 </body>
 </html>
