--- a/reviews.html
+++ b/reviews.html
@@ -11,13 +11,14 @@
 </head>
 <body>
     <header>
+    <!-- Navigation Menu and Logo --> 
     <div id = "fullheader">
-        <h1 id="title">MovieVerse</h1>
+        <div id="title"></div>
         <nav>
             <ul id="navmenu">
-                <li><a href="index.html" class="navbutton">Home</a></li>
-                <li><a href="reviews.html" class="currentbutton">Reviews</a></li>
-                <li><a href="contact.html" class="navbutton">Contact</a></li>
+                <li><a href="index.html" class = "navbutton" >Home</a></li>
+                <li><a href="reviews.html" class = "currentbutton">Reviews</a></li>
+                <li><a href="contact.html" class = "navbutton">Contact</a></li>
             </ul>
         </nav> 
     </div>
@@ -219,6 +220,16 @@
 
 
     </main>
-    <footer></footer>
+    <footer>
+        <div id = "fullfooter">
+            <h2 id = "footcontact">MovieVerse</h2>
+            <ul>
+                <li><a href="https://www.twitter.com">Our Twitter</a></li>
+                <li><a href="https://www.instagram.com">Our Instagram</a></li>
+                <li><a href="https://www.tiktok.com">Our Tiktok</a></li>
+            </ul>
+            <p>This site is a project made for ACIT1515. Created by Jack, Austin, Adrian, and Enock.</p>
+        </div>
+    </footer>
 </body>
 </html>
