--- a/contact.html
+++ b/contact.html
@@ -35,26 +35,44 @@
                 </p>
             </div>
         </div>
-        <h2>MovieVerse</h2>
-        <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
 
-        <h2>What is a movie?</h2>
-        <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
+        <section>
+            <h2>MovieVerse</h2>
+            <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
+        </section>
 
-        <h2>How big is MovieVerse?</h2>
-        <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day. MovieVerse has been a vibrant and growing community in the past few years.</p>
+        <section>
+            <h2>What is a movie?</h2>
+            <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
+        </section>
 
-        <h2>Contact Us</h2>
-        <p class="review-text">Say hello!</p>
+        <section>
+            <h2>How big is MovieVerse?</h2>
+            <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day. MovieVerse has been a vibrant and growing community in the past few years.</p>
+        </section>
 
-        <form id="form">
-            <p class="review-text"><input placeholder="Your Name" required></p>
-            <p class="review-text"><input placeholder="Your Email" required></p>
-            <p class="review-text"><textarea placeholder="Your Message" required></textarea></p>
-            <p class="review-text"><input id="submit" type="submit" value="Send"></p>
-        </form>
+        <section>
+            <h2>Contact Us</h2>
+            <p class="review-text">Say hello!</p>
 
+            <form id="form">
+                <p class="review-text"><input placeholder="Your Name" required></p>
+                <p class="review-text"><input placeholder="Your Email" required></p>
+                <p class="review-text"><textarea placeholder="Your Message" required></textarea></p>
+                <p class="review-text"><input id="submit" type="submit" value="Send"></p>
+            </form>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div id = "fullfooter">
+            <h2 id = "footcontact">MovieVerse</h2>
+            <ul>
+                <li><a href="https://www.twitter.com">Our Twitter</a></li>
+                <li><a href="https://www.instagram.com">Our Instagram</a></li>
+                <li><a href="https://www.tiktok.com">Our Tiktok</a></li>
+            </ul>
+            <p>This site is a project made for ACIT1515. Created by Jack, Austin, Adrian, and Enock.</p>
+        </div>
+    </footer>
 </body>
 </html>
