fixed contact.html styling issues

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,8 @@
                 </p>
             </div>
         </div>
+
+        <div id = "maintext">
         <h2>MovieVerse</h2>
         <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
 
@@ -53,6 +55,7 @@
             <p class="review-text"><textarea placeholder="Your Message" required></textarea></p>
             <p class="review-text"><input id="submit" type="submit" value="Send"></p>
         </form>
+        </div>
 
     </main>
     <footer>
