Optimized reviews page grid layout and spacing, formatted html pages

--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MovieVerse Contacts</title>
+    <link rel="icon" href="/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
-    <!-- Navigation Menu and Logo --> 
-    <div id = "fullheader">
-        <div id="title"></div>
-        <nav>
-            <ul id="navmenu">
-                <li><a href="index.html" class = "navbutton" >Home</a></li>
-                <li><a href="reviews.html" class = "navbutton">Reviews</a></li>
-                <li><a href="contact.html" class = "currentbutton">Contact</a></li>
-            </ul>
-        </nav> 
-    </div>
+        <!-- Navigation Menu and Logo -->
+        <div id="fullheader">
+            <div id="title"></div>
+            <nav>
+                <ul id="navmenu">
+                    <li><a href="index.html" class="navbutton">Home</a></li>
+                    <li><a href="reviews.html" class="navbutton">Reviews</a></li>
+                    <li><a href="contact.html" class="currentbutton">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main id="contactmain">
         <!-- Hero Banner -->
@@ -36,31 +41,34 @@
             </div>
         </div>
 
-        <div id = "maintext">
-        <h2>MovieVerse</h2>
-        <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
+        <div id="maintext">
+            <h2>MovieVerse</h2>
+            <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more.
+                We host communities for thousands of fanbases, each with their own moderators and users.</p>
 
-        <h2>What is a movie?</h2>
-        <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
+            <h2>What is a movie?</h2>
+            <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a
+                theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
 
-        <h2>How big is MovieVerse?</h2>
-        <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day. MovieVerse has been a vibrant and growing community in the past few years.</p>
+            <h2>How big is MovieVerse?</h2>
+            <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day.
+                MovieVerse has been a vibrant and growing community in the past few years.</p>
 
-        <h2>Contact Us</h2>
-        <p class="review-text">Say hello!</p>
+            <h2>Contact Us</h2>
+            <p class="review-text">Say hello!</p>
 
-        <form id="form">
-            <p class="review-text"><input placeholder="Your Name" required></p>
-            <p class="review-text"><input placeholder="Your Email" required></p>
-            <p class="review-text"><textarea placeholder="Your Message" required></textarea></p>
-            <p class="review-text"><input id="submit" type="submit" value="Send"></p>
-        </form>
+            <form id="form">
+                <p class="review-text"><input placeholder="Your Name" required></p>
+                <p class="review-text"><input placeholder="Your Email" required></p>
+                <p class="review-text"><textarea placeholder="Your Message" required></textarea></p>
+                <p class="review-text"><input id="submit" type="submit" value="Send"></p>
+            </form>
         </div>
 
     </main>
     <footer>
-        <div id = "fullfooter">
-            <h2 id = "footcontact">MovieVerse</h2>
+        <div id="fullfooter">
+            <h2 id="footcontact">MovieVerse</h2>
             <ul>
                 <li><a href="https://www.twitter.com">Our Twitter</a></li>
                 <li><a href="https://www.instagram.com">Our Instagram</a></li>
@@ -70,4 +78,5 @@
         </div>
     </footer>
 </body>
+
 </html>
