Made anchor container more responsive

--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Limelight&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -43,16 +41,13 @@
 
         <div id="maintext">
             <h2>MovieVerse</h2>
-            <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more.
-                We host communities for thousands of fanbases, each with their own moderators and users.</p>
+            <p class="review-text">MovieVerse is the leading platform to discuss your favorite movies, shows and more. We host communities for thousands of fanbases, each with their own moderators and users.</p>
 
             <h2>What is a movie?</h2>
-            <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a
-                theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
+            <p class="review-text">A movie is a full-length film recorded by a camera or animated by artists shown in a theater or on your favorite streaming service.<i>"Absolute Cinema"</i> -Martin Scorsese </p>
 
             <h2>How big is MovieVerse?</h2>
-            <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day.
-                MovieVerse has been a vibrant and growing community in the past few years.</p>
+            <p class="review-text">Movies have been around since the 1890s and have kept their popularity to this day. MovieVerse has been a vibrant and growing community in the past few years.</p>
 
             <h2>Contact Us</h2>
             <p class="review-text">Say hello!</p>
