added comments to reviews page

--- a/reviews.html
+++ b/reviews.html
@@ -27,17 +27,19 @@
         </div>
     </header>
     <main>
+        <!-- Grid layout for anchor links navigating to movie reviews -->
         <div id="anchor_container_centre">
             <div id="anchor_container_wrapper">
                 <section id="anchor_container">
-                    <a href="#MinusOne"><img src="images/2E2WTX0TJEflAged6kzErwqX1kt.jpg" class="anchor_poster"></a>
-                    <a href="#OneBattle"><img src="images/m1jFoahEbeQXtx4zArT2FKdbNIj.jpg" class="anchor_poster"></a>
-                    <a href="#FantasticFour"><img src="images/5wVfosV51npuPLrm8uU1zQnfBy8.jpg" class="anchor_poster"></a>
-                    <a href="#Tron"><img src="images/chpWmskl3aKm1aTZqUHRCtviwPy.jpg" class="anchor_poster"></a>
-                    <a href="#NowYouSee"><img src="images/g5NtnMnHYPm2FBplOPaXYPQpWJO.jpg" class="anchor_poster"></a>
+                    <a href="#MinusOne"><img src="images/2E2WTX0TJEflAged6kzErwqX1kt.jpg" class="anchor_poster" alt="godzilla minus one anchor poster"></a>
+                    <a href="#OneBattle"><img src="images/m1jFoahEbeQXtx4zArT2FKdbNIj.jpg" class="anchor_poster" alt="one battle anchor poster"></a>
+                    <a href="#FantasticFour"><img src="images/5wVfosV51npuPLrm8uU1zQnfBy8.jpg" class="anchor_poster" alt="fantastic four anchor poster"></a>
+                    <a href="#Tron"><img src="images/chpWmskl3aKm1aTZqUHRCtviwPy.jpg" class="anchor_poster" alt="tron anchor poster"></a>
+                    <a href="#NowYouSee"><img src="images/g5NtnMnHYPm2FBplOPaXYPQpWJO.jpg" class="anchor_poster" alt="now you see anchor poster"></a>
                 </section>
             </div>
         </div>
+        <!-- Movie review section for Godzilla Minus One -->
         <section class="container">
             <article class="nested-container">
                 <figure class="reviewposter">
@@ -77,7 +79,7 @@
                     <p>Godzilla Minus One is a post-war character-driven monster drama that follows Kōichi Shikishima, a former kamikaze pilot who survives a terrifying, unexpected encounter with Godzilla on a remote military outpost during the final days of World War II. Paralyzed by fear, he fails to fire his weapon, and the monster kills nearly everyone on the island, leaving Shikishima carrying unbearable survivor’s guilt. Returning to Tokyo, he finds his home destroyed, his parents dead, and the city devastated by bombings. He begins living in the ruins with a young woman named Noriko and an orphaned infant she rescued, forming an improvised family unit that gives him a fragile sense of purpose. To support them, Shikishima takes a job clearing naval mines, a dangerous task that mirrors his desire for self-punishment. Meanwhile, Godzilla, mutated further by American nuclear testing, reemerges stronger, angrier, and nearly unstoppable. As the monster marches toward Japan, civilians, engineers, and former navy personnel join together to create a desperate plan using limited post-war resources. They aim to lure Godzilla into deep waters, crush it using pressure from inflatable airbags, and then destroy its core by detonating explosives. Shikishima volunteers for the most dangerous role: flying a restored fighter plane packed with explosives directly into Godzilla’s mouth. The plan works, Godzilla is blown apart, and Shikishima miraculously survives. However, the ending hints at lingering danger as a piece of Godzilla begins to regenerate, suggesting the threat is not gone and the wounds of war — personal and national — are far from healed.</p>
                 </blockquote>
             </article>
-
+            <!-- Movie review section for One Battle After Another -->
             <article class="nested-container">
                 <figure class="reviewposter">
                     <img src="images/one_battle_after_another_ver10_xlg.jpg" alt="One Battle After Another movie poster">
@@ -116,7 +118,7 @@
                     <p>One Battle After Another is a chaotic, emotionally intense drama that centers on Bob Ferguson, a former revolutionary who has been hiding from the world for years. He lives in isolation with his daughter Willa, trying to shield her from the violent past he abandoned. When Willa is suddenly kidnapped, Bob is thrust back into the world of conspiracies, betrayals, and deadly political factions he once was part of. The narrative jumps between two timelines: the present-day chase to rescue Willa and the past, where Bob was involved in the radical organization “French 75,” known for its militant ideology and clandestine operations. Through these flashbacks, the film reveals the emotional scars, ideological conflicts, and betrayals that destroyed the movement and separated Bob from Willa’s mother, Perfidia, who vanished under mysterious circumstances. As Bob retraces his old steps, he confronts former allies, enemies, and the moral ambiguity of the movement that once defined him. The film blends dark humor, political satire, and hyper-stylized action while exploring themes such as ideological extremism, the cost of revolution, and the personal fallout of violent causes. Bob’s journey becomes a desperate attempt to find redemption and rescue the only person who still believes in him. The story builds to a frantic and emotionally heavy climax where Bob confronts the last remnants of the old world he created, forcing him to choose between the man he was and the father he needs to become.</p>
                 </blockquote>
             </article>
-
+            <!-- Movie review section for The Fantastic Four: First Steps -->
             <article class="nested-container">
                 <figure class="reviewposter">
                     <img src="images/fantastic_four_ver26.jpg" alt="Fantastic Four movie poster">
@@ -153,7 +155,7 @@
                     <p>The Fantastic Four: First Steps reintroduces Marvel's iconic superhero team in a retro-futuristic world inspired by the optimistic sci-fi of the 1960s, filled with sleek chrome designs, experimental space programs, and cosmic exploration. The film centers on Reed Richards, Sue Storm, Johnny Storm, and Ben Grimm, whose lives are changed dramatically after a scientific mission goes wrong, giving them extraordinary powers. Reed gains the ability to stretch his body, Sue can turn invisible and create forcefields, Johnny becomes a living flame, and Ben transforms into a super-strong rock-like being. The story follows their struggle to adjust to these changes, not just physically but emotionally, as they navigate fame, fear, and the weight of responsibility. As they grow into their new roles, a cosmic threat emerges in the form of signals and distortions hinting at the presence of Galactus, setting the stage for a larger crisis beyond Earth. The team must work together for the first time, balancing interpersonal conflict with the need to contain increasingly catastrophic cosmic anomalies. The film focuses on themes of scientific curiosity, family unity, and the pressure of being humanity's first line of defense. Its nostalgic aesthetic and tone differentiate it from previous adaptations, emphasizing adventure, optimism, and the beginning of a much broader Marvel cosmic narrative. By the end, the Fantastic Four stand united not just as a team of heroes but as a family, ready for the threats to come.</p>
                 </blockquote>
             </article>
-
+            <!-- Movie review section for Tron: Ares -->
             <article class="nested-container">
 
                 <figure class="reviewposter">
@@ -191,7 +193,7 @@
                     <p>Tron: Ares expands the Tron universe by blurring the boundaries between the digital world and the real one. Set more than a decade after the previous film, the story begins with ENCOM racing to solve an ambitious technological mystery — the “Permanence Code,” a program rumored to bring digital creations into the physical world. Meanwhile, their competitor, Dillinger Systems, secretly develops Ares, a powerful digital Program engineered to be the perfect soldier, obedient and disposable. But as Ares becomes self-aware, he begins questioning his purpose, morality, and identity. His creators deploy him on a dangerous mission to retrieve the Permanence Code, believing it will cement their control over both worlds. Simultaneously, ENCOM scientists manage to materialize a digital object — proving the code works and igniting a corporate and ideological war. As Ares enters the real world, he experiences physical reality for the first time, struggling with concepts like emotion, pain, and freedom. The conflict escalates into a battle between those who wish to use digital life for control and those who see Programs as sentient beings deserving autonomy. Visually, the film features the signature neon-lit digital aesthetic of the Tron franchise, mixed with new real-world action sequences as Programs enter the physical landscape. Thematically, it explores artificial intelligence, the definition of life, and the consequences of playing god with technology. Although filled with spectacular set pieces, the story centers on Ares' attempt to understand what it means to exist beyond code, ultimately leading to a confrontation that forces humans and Programs alike to reconsider the future of both realities.</p>
                 </blockquote>
             </article>
-
+            <!-- Movie review section for Now You See Me: Now You Don't -->
             <article class="nested-container">
 
                 <figure class="reviewposter">
