added comments to review html

--- a/reviews.html
+++ b/reviews.html
@@ -47,7 +47,7 @@
                 </figure>
 
                 <h3 class="film_title" id="MinusOne">Godzilla Minus One</h3>
-
+                <!-- div to create rating card -->
                 <div class="card" aria-label="flippable rating card for godzilla minus one">
                     <div class="card-inner">
                         <div class="card-front">
@@ -86,7 +86,7 @@
                 </figure>
 
                 <h3 class="film_title" id="OneBattle">One Battle After Another</h3>
-
+                <!-- div to create rating card -->
                 <div class="card" aria-label="flippable rating card for one battle after another">
                     <div class="card-inner">
                         <div class="card-front">
@@ -124,6 +124,7 @@
                     <img src="images/fantastic_four_ver26.jpg" alt="Fantastic Four movie poster">
                 </figure>
                 <h3 class="film_title" id="FantasticFour">The Fantastic Four: First Steps</h3>
+                <!-- div to create rating card -->
                 <div class="card" aria-label="flippable rating card for fantastic four">
                     <div class="card-inner">
                         <div class="card-front">
@@ -162,6 +163,8 @@
                     <img src="images/chpWmskl3aKm1aTZqUHRCtviwPy.jpg" alt="Tron: Ares movie poster">
                 </figure>
                 <h3 class="film_title" id="Tron">Tron: Ares</h3>
+                
+                <!-- div to create rating card -->
                 <div class="card" aria-label="flippable rating card for tron:ares">
                     <div class="card-inner">
                         <div class="card-front">
@@ -200,7 +203,7 @@
                     <img src="images/now_you_see_me_now_you_dont_ver2.jpg" alt="Now You See Me: Now You Don't movie poster">
                 </figure>
                 <h3 class="film_title" id="NowYouSee">Now You See Me: Now You Don't</h3>
-
+                <!-- div to create rating card --> 
                 <div class="card" aria-label="flippable rating card for now you see me">
                     <div class="card-inner">
                         <div class="card-front">
