cleaned up review.html and renamed star image

--- a/reviews.html
+++ b/reviews.html
@@ -51,24 +51,24 @@
                 <div class="card" aria-label="flippable rating card for godzilla minus one">
                     <div class="card-inner">
                         <div class="card-front">
-                            <h4 class="rating_title">Rating</h4">
+                            <h4 class="rating_title">Rating</h4>
                         </div>
                         <div class="card-back">
                             <section class="star_rating">
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                             </section>
                         </div>
@@ -90,24 +90,24 @@
                 <div class="card" aria-label="flippable rating card for one battle after another">
                     <div class="card-inner">
                         <div class="card-front">
-                            <h4 class="rating_title">Rating</h4">
+                            <h4 class="rating_title">Rating</h4>
                         </div>
                         <div class="card-back">
                             <section class="star_rating">
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                             </section>
                         </div>
@@ -128,24 +128,24 @@
                 <div class="card" aria-label="flippable rating card for fantastic four">
                     <div class="card-inner">
                         <div class="card-front">
-                            <h4 class="rating_title">Rating</h4">
+                            <h4 class="rating_title">Rating</h4>
                         </div>
                         <div class="card-back">
                             <section class="star_rating">
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                             </section>
                         </div>
@@ -168,24 +168,24 @@
                 <div class="card" aria-label="flippable rating card for tron:ares">
                     <div class="card-inner">
                         <div class="card-front">
-                            <h4 class="rating_title">Rating</h4">
+                            <h4 class="rating_title">Rating</h4>
                         </div>
                         <div class="card-back">
                             <section class="star_rating">
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                             </section>
                         </div>
@@ -207,24 +207,24 @@
                 <div class="card" aria-label="flippable rating card for now you see me">
                     <div class="card-inner">
                         <div class="card-front">
-                            <h4 class="rating_title">Rating</h4">
+                            <h4 class="rating_title">Rating</h4>
                         </div>
                         <div class="card-back">
                             <section class="star_rating">
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                                 <figure>
-                                    <img src="images/pngimg.com - star_PNG41474.png" alt="image of individual yellow rating star">
+                                    <img src="images/star.png" alt="image of individual yellow rating star">
                                 </figure>
                             </section>
                         </div>
